# homeplayer

./: .gitignore  Cargo.toml  Cross.toml
assets/languages/: de.egl  en.egl
docker/: Dockerfile  cmake.sh  lib.sh  xargo.sh
rodio-player/: Cargo.toml
rodio-player/src/: cd_audio.rs  lib.rs
src/: bluetooth.rs  config.rs  main.rs  music_store.rs  swipe_view.rs
src/pages/: bluetooth_settings.rs  cd_source.rs  file_source.rs  kids_file_source.rs  mod.rs  now_playing.rs  playlist.rs  settings.rs  stream_source.rs
