[package]
name = "homeplayer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui = { version = "0.34", default-features = false }
eframe = { version = "0.34", default-features = false, features = [
    "default",
    "default_fonts",
    "glow",
] }

anyhow = "1.0"
config = "0.15"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

lofty = "0.23"
rusqlite = { version = "0.39", features = ["bundled"] }

tokio = { version = "1.50", features = ["rt-multi-thread", "sync", "time"] }
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = "0.3"

image = { version = "0.25", default-features = false, features = ["jpeg"] }

rodio-player = { path = "rodio-player" }
egui-i18n = { version = "0.2", features = ["classic"] }

[profile.minsize]
inherits = "release"
strip = true
lto = "fat"
opt-level = "s"
panic = "abort"
