[package]
name = "rodio-player"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
icy-metadata = "0.6"
libc = "0.2"
rodio = { version = "0.21", default-features = false, features = [
    "symphonia-all",
    "playback",
] }
stream-download = { version = "0.24", features = ["reqwest-rustls"] }
tracing = "0.1"
